--- a/5bit/iis/projekt/css/style.css
+++ b/5bit/iis/projekt/css/style.css
@@ -35,9 +35,10 @@
 }
 
 html {
-	height: 100%;
+	padding: 0;
+	margin: 0;
+	min-height: 100%;
 	box-sizing: border-box;
-	overflow-x: hidden;
 	overflow: auto;
 }
 
@@ -53,24 +54,31 @@ a {
 }
 
 body {
+	padding: 0;
+	margin: 0;
 	background: #000 url("https://www.stud.fit.vutbr.cz/~xaubre02/pic/magic_forest.png") no-repeat fixed center !important;
 	background-size: cover !important;
-	max-width: 1200px !important;
+	max-width: 65vw !important;
+	min-width: 800px;
+	min-height: 480px;
 	width: 100% !important;
+	height: 100%;
 	overflow: auto;
 	margin: auto !important;
 }
 
 .wrapper {
    min-height: 100vh;
+   height: 100%;
    position: relative;
+   margin: 0 auto;
 }
 
 /*=============================* LOGIN *=============================*/
 #login, #register, #logout_msg{
-	width: 50%;
+	width: 580px;
 	margin: auto;
-	margin-top: 15%;
+	margin-top: 100px;
 }
 
 #login img, #register img, #logout_msg img {
@@ -81,15 +89,15 @@ body {
 #login form, #register form, #logout_msg form{
 	width: 60%;
 	margin: auto;
-	padding: 0.75vw;
+	padding: 14px;
 	background-color: #d9d9d9;
-	border-radius: 0.5vw;
+	border-radius: 12px;
 	opacity: 0.9;
 }
 
 .form-part {
 	width: 100%;
-	height: 2vw;
+	height: 40px;
 	margin: auto;
 	margin-top: 5%;
 	color: black;
@@ -99,20 +107,20 @@ body {
 	float: left;
 	width: 40%;
 	text-align: right;
-	font-size: 1.2vw;
-	font-family: fantasy;
-	padding: 1% 3% 0 0;
+	font-size: 21px;
+	font-family: Impact, Charcoal, sans-serif;
+	padding-top: 5px;
 }
 
 .form-part input {
 	float: right;
 	width: 60%;
 	height: 100%;
-	font-size: 1vw;
-	font-family: fantasy;
-	padding-left: 3%;
+	font-size: 18px;
+	font-family: Impact, Charcoal, sans-serif;
+	padding-left: 10px;
 	border: 2px black solid;
-	border-radius: 0.5vw;
+	border-radius: 12px;
 	outline: none;
 }
 
@@ -120,19 +128,19 @@ body {
 	clear: both;
 	width: 90%;
 	margin: auto;
-	margin-top: 10%;
+	margin-top: 20px;
 }
 
 .button {
 	float: left;
 	width: 47.5%;
-	height: 3vw;
-	font-size: 1.2vw;
-	font-family: fantasy;
+	height: 55px;
+	font-size: 23px;
+	font-family: Impact, Charcoal, sans-serif;
 	color: white;
 	background-color: black;
-	border: 2px white solid;
-	border-radius: 0.8vw;
+	border: 2px #b3b3b3 solid;
+	border-radius: 16px;
 	transition: color .4s, border-color .4s, background-color .4s;
 	outline: none;
 }
@@ -140,19 +148,19 @@ body {
 .button:first-child {
 	margin-right: 5%;
 	text-align: center;
-	padding-top: 4%;
+	padding-top: 12px;
 }
 
 .button:hover {
 	cursor: pointer;
 	color: black;
 	border-color: black;
-	background-color: white;
+	background-color: #b3b3b3;
 }
 
 /*===========================* REGISTER *============================*/
 #register, #logout_msg{
-	margin-top: 10%;
+	margin-top: 50px;
 }
 
 #register form, #logout_msg form {
@@ -167,19 +175,29 @@ body {
 	width: 50%;
 }
 
+#register p {
+	font-size: 16px;
+	font-weight: bold;
+	font-style: italic;
+	margin: auto;
+	margin-top: 16px;
+	width: 100px;
+}
+
 #reg-succ  {
 	text-align: center;
 }
 
-#reg-succ span{
+#reg-succ a, #reg-succ span{
 	width: 40%;
 	margin: 5% 0 0 30%;
 	padding-top: 3%;
 }
 
 #reg-succ p {
-	font-size: 1.2vw;
-	font-family: fantasy;
+	font-size: 20px;
+	width: 100%;
+	font-family: Impact, Charcoal, sans-serif;
 	padding: 1% 0 0 2%;
 }
 
@@ -193,9 +211,10 @@ body {
 	float: right;
 	width: 60%;
 	margin: 1% 0 5% 0;
-	padding-left: 1%;
+	padding-left: 0px;
 	color: red;
 	font-style: italic;
+	font-size: 14px
 }
 
 #register .err-msg {
@@ -205,15 +224,15 @@ body {
 /*============================* HEADER *=============================*/
 header {
 	width: 100%;
-	height: 10vh;
+	height: 75px;
 	opacity: 0.95;
 }
 
 .main-menu {
 	width: 100%;
 	height: 60%;
-	font-size: 1.5vw;
-	font-family: fantasy;
+	font-size: 28px;
+	font-family: Impact, Charcoal, sans-serif;
 	background-color: black;
 }
 
@@ -227,7 +246,7 @@ header {
 }
 
 .main-menu a {
-	padding-top: 0.5vw;
+	padding-top: 6px;
 }
 
 .main-menu a:hover, .main-menu input:hover{
@@ -236,12 +255,10 @@ header {
 }
 
 .main-menu input {
-	margin: 0;
-	padding: 0;
 	width: 100%;
 	height: 100%;
-	font-size: 1.5vw;
-	font-family: fantasy;
+	font-size: 28px;
+	font-family: Impact, Charcoal, sans-serif;
 	background-color: black;
 	border: none;
 	outline: none;
@@ -261,8 +278,8 @@ header {
 .sub-menu {
 	width: 100%;
 	height: 40%;
-	font-size: 1.1vw;
-	font-family: fantasy;
+	font-size: 18px;
+	font-family: Impact, Charcoal, sans-serif;
 	background-color: #b3b3b3;
 }
 
@@ -272,7 +289,7 @@ header {
 	height: 100%;
 	color: black;
 	text-align: center;
-	padding-top: 0.3vw;
+	padding-top: 5px;
 	transition: color .4s, background-color .4s;
 }
 
@@ -287,31 +304,227 @@ header {
 
 /*===========================* CONTENT *=============================*/
 .content {
+	overflow: auto;
 	width: 100%;
-	min-height: 85vh;
+	min-height: calc(100vh - 113px);
 	background-color: #f2f2f2;
 	opacity: 0.95;
-	padding: 2vw;
+	padding: 16px;
+	margin-bottom: 38px;
 }
 
 .content h1{
-	font-size: 2vw;
-	font-family: fantasy;
-	margin-bottom: 1vw;
+	font-family: Impact;
+	font-size: 28px;
+	font-weight: 100;
+	margin-bottom: 15px;
 }
 
 .content p {
-	font-size: 1.2vw;
+	font-size: 18px;
+	font-weight: 100;
+}
+
+.content a {
+	color: black;
+	font-weight: bold;
+}
+
+.content br {
+	margin-left: 16px;
+}
+
+.content form {
+	margin: 64px auto;
+	width: 50%;
+}
+
+.text_input {
+	width: 80%;
+	min-width: 379px;
+	min-height: 40px;
+	margin: auto;
+	margin-top: 15px;
+}
+
+.content .err-msg {
+	width: 38%;
+	min-width: 160px;
+	margin-right: 23%;
+}
+
+.text_input label {
+	float: left;
+	text-align: right;
+	width: 35%;
+	height: 100%;
+	font-family: Impact, Charcoal, sans-serif;
+	font-size: 20px;
+	padding: 6px 15px 0 0;
+}
+
+.text_input input {
+	float: right;
+	width: 50%;
+	height: 40px;
+	font-size: 18px;
+	padding: 0 10px;
+	border: 2px black solid;
+	border-radius: 12px;
+	margin-right: 15%;
+	outline: none;
+	font-family: Impact, Charcoal, sans-serif;
+}
+
+.choice_array {
+	float: left;
+	width: 50%;
+}
+
+.choice{
+	width: 100%;
+	margin: 6px 0 10px 0;
+}
+
+.choice span{
+	float: left;
+	font-size: 18px;
+	font-family: Impact, Charcoal, sans-serif;
+}
+
+.choice input{
+	float: left;
+	width: 16px;
+	height: 16px;
+	margin: 3px 10px 0 3px;
+}
+
+.content form  .button {
+	float: left;
+	width: 142px;
+	margin-top: 30px;
+	margin-left: calc(50% - 71px);
+	color: white;
+	text-align: center;
+	font-weight: normal;
+}
+
+.content form a {
+	padding-top: 10px;
+}
+
+.content form .button:hover {
+	color: black;
+}
+
+.content form p {
+	font-size: 24px;
+	text-align: center;
+	font-family: Impact, Charcoal, sans-serif;
+}
+
+/*===========================* PROFILE *=============================*/
+.profile_content {
+	margin: auto;
+	width: 460px;
+	border-radius: 24px;
+}
+
+.profile_part {
+	font-size: 24px;
+	font-family: Impact, Charcoal, sans-serif;
+	margin-top: 5px;
+	background-color: white;
+	min-height: 42px;
+}
+
+.profile_part:first-child  {
+	margin-top: 0px;
+}
+	
+.profile_part span{
+	height: 42px;
+	padding-top: 8px;
+}
+
+.profile_part p{
+	font-size: 20px;
+	height: 36px;
+	padding-top: 12px;
+}
+	
+.profile_part span{
+	float: left;
+	width: 45%;
+	text-align: right;
+	margin-right: 5%;
+}
+
+.profile_part_wrapper{
+	float: right;
+	width: 50%;
+}
+
+.profile_db {
+	float: left;
+	width: 100%;
+	font-style: italic;
+	padding-right: 10px;
+}
+
+.profile_db:last-child {
+	margin-bottom: 10px;
+}
+
+/*===========================* OVERVIEW *============================*/
+.table {
+	text-align: left;
+	margin: auto;
+	margin-top: 30px;
+	width: 90%;
+	min-width: 1080px;
+}
+
+.table_head {
+	display: inline-block;
+	margin: auto;
+	font-size: 22px;
+	font-family: Impact, Charcoal, sans-serif;
+	background-color: #b3b3b3;
+}
+
+.table span {
+	float: left;
+	padding-left: 5px;
+	width: 150px;
+}
+
+.table_content {
+	margin: auto;
+	display: inline-block;
+	background-color: white;
+}
+
+.table_content span {
+	font-size: 20px;
+}
+
+#column_mana {
+	width: 75px;
+}
+
+#column_level {
+	width: 85px;
 }
 
 /*============================* FOOTER *=============================*/
 footer {
 	position: absolute;
 	bottom: 0;
-	right: 0;
 	width: 100%;
-	height: 5vh;
+	height: 38px;
 	text-align: center;
-	padding-top: 0.3vw;
+	font-size: 12px;
+	padding-top: 6px;
 	opacity: 0.7;
 }
