--- a/5bit/iis/projekt/css/style.css
+++ b/5bit/iis/projekt/css/style.css
@@ -477,6 +477,45 @@ header {
 }
 
 /*===========================* OVERVIEW *============================*/
+.search {
+	background-color: #b3b3b3;
+	width: 345px;
+	height: 60px;
+	padding: 10px 15px;
+}
+
+.search form{
+	margin: 0;
+	padding: 0;
+	width: 100%;
+	height: 100%;
+}
+
+.search input {
+	float: left;
+	border-radius: 10px !important;
+}
+
+.search form input:first-child{
+	width: 200px;
+	height: 40px;
+	font-size: 18px;
+	padding: 0 10px;
+	border: 2px black solid;
+	border-radius: 12px;
+	margin-right: 15px;
+	outline: none;
+	font-family: Impact, Charcoal, sans-serif;
+}
+
+.search form .button{
+	margin: 0;
+	padding: 0;
+	height: 40px;
+	width: 100px;
+	font-size: 20px;
+}
+
 .table {
 	text-align: left;
 	margin: auto;
@@ -491,6 +530,15 @@ header {
 	font-size: 22px;
 	font-family: Impact, Charcoal, sans-serif;
 	background-color: #b3b3b3;
+}
+
+.table_msg {
+	width: 500px !important; 
+	background-color: #f2f2f2 !important; 
+	font-size: 28px; 
+	margin: 0 !important; 
+	padding: 0 !important;
+	
 }
 
 .table span {
@@ -515,6 +563,38 @@ header {
 
 #column_level {
 	width: 85px;
+}
+
+#column_sec_element{
+	width: 175px;
+}
+
+#column_scroll{
+	width: 220px;
+}
+
+.edit_pic{
+	margin-left: 5px;
+}
+
+.edit_pic img{
+	width: 20px;
+}
+
+.button_choice {
+	margin: auto;
+	margin-top: 50px;
+	width: 304px;
+}
+
+.button_choice .button{
+	margin: 0 !important;
+	padding: 0 !important;
+}
+
+.button_choice .button:first-child{
+	padding-top: 11px !important;
+	margin-right: 20px !important;
 }
 
 /*============================* FOOTER *=============================*/
