--- a/mis/2mis/wap/style.css
+++ b/mis/2mis/wap/style.css
@@ -14,15 +14,8 @@ footer   {font-size: 20px}
 
 /* velikosti obrázků */
 img {
-	width: 220px;
-	border: 1px solid #ddd;
-	border-radius: 4px;
-	padding: 5px;
-}
-
-img:hover {
-	box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
-	outline: 0;
+	max-width: 250px;
+  max-height: 150px;
 }
 
 a:focus {
@@ -61,4 +54,93 @@ h3 {
 footer {
 	margin: 30px 0 15px 0;
 	text-align: center;
+}
+
+/* ---------------------------- DEBUG ---------------------------- */
+.multiimage {
+  position:relative;
+  display: inline-block;
+  margin: auto;
+}
+
+.multiimage a {
+  display: none;
+  position:relative;
+  width: auto;
+  transition: 0.3s;
+}
+
+.multiimage a:first-child {
+  display: inline-block;
+  z-index: 10;
+}
+
+#child, #child2, #child3, #child4 {
+  animation-name: show;
+  animation-duration: 0.8s;
+  z-index: 1;
+  
+}
+
+@keyframes show {
+  from {transform:scale(0); top: 0; left:0;}
+  to {transform:scale(1)}
+}
+
+.multiimage:hover #child {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: -220px;
+}
+
+.multiimage:hover #child2 {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 220px;
+}
+
+.multiimage:hover #child4 {
+  display: block;
+  position: absolute;
+  top: 135px;
+  left: 32px;
+}
+
+.multiimage:hover #child3 {
+  display: block;
+  position: absolute;
+  top: -135px;
+  left: 0px;
+}
+
+.multiimage:hover #icon {
+  visibility: hidden;
+  opacity: 0;
+}
+
+.multiimage img:first-child {
+  max-width: 200px;
+  padding: 4px;
+  border-radius: 4px;
+  border: 1px solid #b3b3b3;
+  transition: 0.3s;
+}
+
+.multiimage img:hover {
+  box-shadow: 0 0 2px 1px rgba(100, 200, 255, 0.75);
+  /*opacity: 0.7;*/
+}
+
+#icon {
+  width: 24px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  transition: visibility 0.2s, opacity 0.2s linear;
+}
+
+#child4 img {
+  max-height: 100px;
 }
