--- a/mis/2mis/wap/style.css
+++ b/mis/2mis/wap/style.css
@@ -25,14 +25,11 @@ body {
 	background-image: linear-gradient(to right, rgba(200,200,200,0), rgba(200,200,200,1));
 }
 
-h3 {
-	margin-bottom: 7px;
-}
+h3 {margin: 7px 0;}
 
-.section{
-	margin-top: 42px;
-	text-align: justify;
-}
+.section{margin-top: 42px;}
+
+p {text-align: justify;}
 
 .examples {
 	margin: 10px 0 10px 0;
